--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -136,7 +136,7 @@
 		<li n:if="$member->mail2">
 			{include svg envelope-o} <b>Sekundární e-mail:</b> <a href="mailto:{$member->mail2}">{$member->mail2}</a>
 		</li>
-		<li n:if="$member->telefon2">k
+		<li n:if="$member->telefon2">
 			{include svg phone-square} <b>Sekundární telefon:</b> <a href="tel:+420{$member->telefon2}">{$member->telefon2|phone}</a>
 		</li>
 	</ul>
