--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" href="{$baseUrl}/css/member.css" type="text/css">
 	<link rel="stylesheet" href="{$baseUrl}/css/member.mobile.css" type="text/css" media="screen and (max-width: 900px)">
 	<link rel="stylesheet" href="{$baseUrl}/css/member.mobile.css" type="text/css" media="screen and (orientation: portrait)">
+	<link rel="stylesheet" href="{$baseUrl}/css/member.black.css" type="text/css" n:if="$user->identity->theme">
 	<link rel="stylesheet" href="{$baseUrl}/css/symbols.css">
 
 	<script src="{$baseUrl}/js/jquery.min.js" type="text/javascript"></script>
@@ -32,7 +33,7 @@
 	<title>{if isset($title)}{$title} | {/if}{block #title|stripHtml|trim}{/block} | VZS Jablonec</title>
 	{block #head}{/block}
 </head>
-<body>
+<body n:class="($user->identity->theme) ? black">
 <div id="main">
 	<div id="top">
 		<div id="top-right">
@@ -46,7 +47,8 @@
 			{/if}
 		</div>
 		<img src="{$baseUrl}/img/vzs.svg" alt="VZS ČČK" height="85" width="85">
-		<img src="{$baseUrl}/img/zralok.svg" alt="VZS JBC" height="85" width="85">
+		<img src="{$baseUrl}/img/zralok.svg" alt="VZS JBC" height="85" width="85" n:if="!$user->identity->theme">
+		<img src="{$baseUrl}/img/zralok.black.svg" alt="VZS JBC" height="85" width="85" n:if="$user->identity->theme">
 		{include #title}
 	</div>
 
