--- a/www/vzsjablonec/css/member.billing.css
+++ b/www/vzsjablonec/css/member.billing.css
@@ -7,5 +7,5 @@
 #billing table.view { background-color: #fffff6; }
 #billing table.view .booked { font-style: italic; }
 #billing table.view, #billing table.view td, #billing table.view th { border: 1px solid #ccc; padding: 1ex; }
-#billing table.view .last { border-top: 2px solid black; font-weight: bold; }
+#billing table.view .last { border-top-width: 2px; font-weight: bold; }
 #billing table.edit td { text-align: center; }
