Add table on user page with recent events, witch member pacipate. Table is loaded dynamicly with ajax. If was needed to make same change in akceService

--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -18,6 +18,10 @@
 		#photo { background-color: silver; color: gray; padding: 65px 0;}
 		.card #logo { display: none; }
 
+		#events { caption-side: bottom; }
+		#events caption { margin-top: 1em; }
+		h3#events-header { margin-top: 2em;}
+
 		@media screen and (min-width: 600px) {
 			.card .buttonMenu { margin-top: 0; padding-bottom: 2ex;}
 
@@ -35,6 +39,8 @@
 		}
 	</style>
 	<script type="text/javascript" src="{$baseUrl}/js/confirm.js"></script>
+	<script type="text/javascript" src="{$baseUrl}/js/jquery.nette.js"></script>
+	<script type="text/javascript" src="{$baseUrl}/js/nette.ajax.js"></script>
 {/block}
 
 <h1 n:block="#title">Osobní profil</h1>
@@ -155,14 +161,46 @@
 		</address>
 	{/if}
 
-	<p n:if="$user->isInRole('member')">
-		<a n:if="$user->isInRole('board')" n:href="registrationForm $member->id" class="buttonLike">{include svg file-pdf-o} stáhnout formulář</a>
-		<a n:href="vcf $member->id" class="buttonLike">{include svg address-card-o} stáhnout vizitku</a>
-	</p>
-
 	<div id="poznamka">
 		{$member->text|noescape|texy}
 	</div>
 
+	<p n:if="$user->isInRole('member')">
+		<a n:if="$user->isInRole('board')" n:href="registrationForm $member->id" class="buttonLike">{include svg file-pdf-o} stáhnout formulář</a>
+		<a n:href="vcf $member->id" class="buttonLike">{include svg address-card-o} stáhnout vizitku</a>
+		<a n:if="$user->isInRole('member')" n:href="showUserEvents!" class="buttonLike ajax">{include svg calendar} nedávné akce</a>
+	</p>
+
+	<div n:snippet="events">
+		{if $showEvents}
+			<h3 id="events-header">{include svg calendar} Nedávné akce</h3>
+
+			<table id="events">
+				<caption n:snippet="events-loadMore">
+					<a class="buttonLike ajax" n:href="loadMoreUserEvents! $offset">{include svg repeat} načíst další</a>
+				</caption>
+				<thead>
+					<tr><th></th><th>Datum akce</th><th>Název</th><th>Datum přihlášení</th><th></th></tr>
+				</thead>
+				<tbody n:snippet="events-table" data-ajax-append="true">
+					<tr n:foreach="$events as $event">
+						<td>{if $event->organizator}{include svg user-o}{/if}</td>
+						<td><time datetime="{$event->date_start|datetimeC}">{$event->date_start|date:'d.m.Y'}</time></td>
+						<td><a n:href="Akce:view $event->akce_id" target="_blank">{$event->title}</a></td>
+						<td><time datetime="{$event->date_add|datetimeC}">{$event->date_add|datetime}</time></td>
+						<td>
+							<a n:if="$event->created_by != $member->id" href="{$event->created_by}" target="_blank">
+								{include svg check} {$event->ref('user', 'created_by')->surname} {$event->ref('user', 'created_by')->name}
+							</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		{/if}
+	</div>
+
+	<script type="text/javascript" n:syntax="off" n:nonce>
+		$.nette.init();
+	</script>
 </div>
 {/block}
