Updace css on user view page so it work with dark mode

--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -10,8 +10,8 @@
 		.card { position: relative; color: white; margin-top: 1em; max-width: 53em;}
 		.card, .square table { font-family: Arial, 'sans-serif';}
 		.line { display: none; }
-		.square { background-color: white;}
-		.square table { text-align: left; color: black; border-collapse: collapse; font-size: 1.2em; height: 150px;}
+
+		.square table { text-align: left;  border-collapse: collapse; font-size: 1.2em; height: 150px;}
 		.square table th, .square table td { padding: 0 1ex; font-weight: bold;}
 		.square table th { text-align: right; border-right: 2px solid silver; font-weight: normal}
 		#first { display: block; text-align: right; padding-bottom: 0.6ex; padding-right: 1.5em; border-radius: 1.5em 1.5em 0 0;}
@@ -25,7 +25,7 @@
 			.card .line .buttonLike { font-size: 0.70em; }
 			.card #logo { display: block; position: absolute; bottom: 1em; right: 1em; background-color: white; padding: 1em; border-radius: 100%;}
 
-			.card .square { padding: 1em 1em 2em 1.1em; }
+			.card .square { background-color: white; color: black; padding: 1em 1em 2em 1.1em; }
 			.card .square table th, .square table td { padding: 0 1em; }
 			.card .blue { background-color: #12397e; color: white;}
 			.card .red { background-color: #da251c; color: white;}
