Forget to change the icon in pools  from forum

--- a/app/MemberModule/templates/Ankety.default.latte
+++ b/app/MemberModule/templates/Ankety.default.latte
@@ -59,7 +59,7 @@
 					</div>
 					<div class="no-wrap">
 						<a title="{$vote->date_add|timeAgoInWords}" n:href="Ankety:view $anketa->id">
-							{include svg comments-o} <time datetime="{$vote->date_add|datetimeC}">{$vote->date_add|datetime}</time>
+							{include svg list-ul} <time datetime="{$vote->date_add|datetimeC}">{$vote->date_add|datetime}</time>
 							<a>
 					</div>
 				{/if}
