--- a/app/CronModule/templates/Contacts.update.latte
+++ b/app/CronModule/templates/Contacts.update.latte
@@ -1,5 +1,5 @@
 {ifset $items}
 	{foreach $items as $id => $item}
-		{$id|padLeft:3} {if $item}$item{/if}<br />
+		{$id|padLeft:3} {if $item}{$item}{/if}<br />
 	{/foreach}
 {/ifset}
