--- a/app/MemberModule/templates/Hlasovani.default.latte
+++ b/app/MemberModule/templates/Hlasovani.default.latte
@@ -22,7 +22,7 @@ table#items .first { font-size: 1.1em;}
 <table id="items">
 <tr class="first"><th>Hlasování</th><th>Počet hlasů</th><th>Poslední hlas</th></tr>
 {foreach $ankety as $item}
-	{var locked = $item->locked}
+	{var $locked = $item->locked}
 	{if $item->date_deatline < date_create()}{var $locked = TRUE}{/if}
 	{var $post = $item->related('hlasovani_member','hlasovani_id')->order('date_add DESC')->fetch()}
 	
