--- a/app/MemberModule/templates/Dokumenty.default.latte
+++ b/app/MemberModule/templates/Dokumenty.default.latte
@@ -31,7 +31,7 @@
 	{/foreach}
 	{foreach $dir->related($TABLE_DOKUMENTY)->order('name') as $file}
 			<li id="{$file->id}" n:class="file, hoverLike, $file->modifiedTime > $user->getIdentity()->date_last ? 'new'">
-				<img class="file-icon" height="16" width="16" src="{$file->iconLink}" title="{$file->mimeType}" alt="{$file->mimeType}">
+				<img class="file-icon" height="16" width="16" src="https://drive-thirdparty.googleusercontent.com/16/type/{$file->mimeType}" title="{$file->mimeType}" alt="{$file->mimeType}">
 				<a class="link" target="_blank" title="Datum změny: {$file->modifiedTime|datetime}" href="{$file->webViewLink}">{$file->name}</a>
 				{if ($file->webContentLink)and(!Nette\Utils\Strings::startsWith($file->mimeType, 'application/vnd.google-apps'))}
 					<a class="float-right" href="{$file->webContentLink}" title="stáhnout">{include svg download} stáhnout</a>
